--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script defer type="module" src="js/entity/database.js"></script>
     </head>
     <body>
-        <p>Hello world</p>
+        <p>Hello CSIT314</p>
 
         <!-- Login Form -->        
         <form name="user_login" id="login_form" action="index.html" method="post">
