--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +7,10 @@
         <title>Solveware</title>
         <link rel = "stylesheet" href = "style/main.css">
         <script defer type="module" src="main.js"></script>
-        <script defer type="module" src="js/entity/database.js"></script>
     </head>
     <body>
         <p>Hello CSIT314</p>
+        <a href="testpage.html">Test page</a>
 
         <!-- Login Form -->        
         <form name="user_login" id="login_form" action="index.html" method="post">
