--- a/index.html
+++ b/index.html
@@ -35,36 +35,41 @@
         <br>
 
         <!-- Create Account Form -->
-        <form name="signUp" id="signUp_form" action="index.html" method="post">
+        <form name="createUser" id="createUser_form" action="index.html" method="post">
             <table>
                 <tr>
                     <th colspan="2">Create New User</th>
                 </tr>
                 <tr>
-                    <td>Login:</td>
-                    <td><input type="text" placeholder="Enter username" name="username" id="signUp_username"></td>
+                    <td>Username:</td>
+                    <td><input type="text" placeholder="Enter username" name="username" id="createUser_username"></td>
                 </tr>
                 <tr>
                     <td>Password:</td>
-                    <td><input type="password" placeholder="Enter password" name="password" id="signUp_pwd"></td>
+                    <td><input type="password" placeholder="Enter password" name="password" id="createUser_pwd"></td>
                 </tr>
                 <tr>
-                    <td>Name:</td>
-                    <td><input type="text" placeholder="Enter name" name="name" id="signUp_name"></td>
+                    <td>First Name:</td>
+                    <td><input type="text" placeholder="Enter first name" name="fname" id="createUser_fname"></td>
+                </tr>
+                <tr>
+                    <td>Last Name:</td>
+                    <td><input type="text" placeholder="Enter last name" name="lname" id="createUser_lname"></td>
                 </tr>
                 <tr> <!-- Need to change to a dropdown box with all profile type -->
                     <td>Staff profile:</td>
-                    <td><input type="number" placeholder="Enter profile" name="profile" id="signUp_profile"></td>
+                    <td><input type="text" placeholder="Enter profile" name="profile" id="createUser_profile"></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button type="submit" id="signUp_btn">Create</button></td>
+                    <td><button type="submit" id="createUser_btn">Create</button></td>
+                    <td><span id="createUser_Out"></span></td>
                 </tr>
             </table>
         </form>
 
         <br>
 
-        <!-- Temp learning delete function  -->
+        <!-- Temporary learning delete function  -->
         <form name="delete" id="delete_form" action="index.html" method="get">
             <table>
                 <tr>
@@ -75,9 +80,25 @@
                     <td><input type="text" placeholder="Enter username" name="username" id="delete_username"></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button type="submit" id="delete_btn">Delete</button></td>
+                    <td>Account Status:</td>
+                    <td><input type="text" placeholder="Enter status" name="status" id="delete_status"></td>
+                </tr>
+                <tr>
+                    <td><button type="submit" id="delete_btn">Delete</button></td>
+                    <td><span id="delete_Out"></span></td>
                 </tr>
             </table>
         </form>
+
+        <br>
+
+        <!-- Search form -->
+        <form name="search" id="search_form" method="get">
+            <input type="text" placeholder="Search username" name="username" id="search_username">
+            <button type="submit" id="search_btn">Search</button>
+        </form>
+        <table id="search_result">
+            
+        </table>
     </body>
 </html>
