Fix Admin create account function

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </tr>
                 <tr> <!-- Need to change to a dropdown box with all profile type -->
                     <td>User profile:</td>
-                    <td><select id="createUser_profile"></td>
+                    <td><select name="profile" id="createUser_profile"></td>
                 </tr>
                 <tr>
                     <td><button type="submit" id="createUser_btn">Create</button></td>
@@ -71,7 +71,7 @@
         <br>
 
         <!-- Temporary learning delete function  -->
-        <form name="delete" id="delete_form" action="index.html" method="get">
+        <!-- <form name="delete" id="delete_form" action="index.html" method="get">
             <table>
                 <tr>
                     <th colspan="2">Delete User</th>
@@ -89,7 +89,7 @@
                     <td><span id="delete_Out"></span></td>
                 </tr>
             </table>
-        </form>
+        </form> -->
 
         <br>
 
