Manage User Account
Colour changes and etc.

--- a/manageUserAccount.html
+++ b/manageUserAccount.html
@@ -7,7 +7,7 @@
     <div class="useradminmenu">
         <button class="innertab" id="newAccount_btn">Add New Account</button>
         <form name="search" id="search_form" method="get">
-            <input type="text" placeholder="Search Name" name="name" class="searchBar" id="search_name">
+            <input type="text" placeholder="Search name.." name="name" class="searchBar" id="search_name">
             <button type="submit" class="searchBtn" id="search_btn">Search</button>
         </form>
         <br>
@@ -52,7 +52,7 @@
                         <td><select name="profile" id="createUser_profile"></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button type="submit" id="createUser_btn">Create</button></td>
+                        <td colspan="2"><button type="submit" id="createUser_btn" class="btn default">Create</button></td>
                     </tr>
                     <tr>
                         <td colspan="2"><span id="createUser_Out"></span></td>
