Manage User Profile
Colour + alignment changes

--- a/manageUserProfile.html
+++ b/manageUserProfile.html
@@ -33,7 +33,7 @@
                             </select></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button type="submit" id="createProfile_btn">Create</button></td>
+                        <td colspan="2"><button type="submit" id="createProfile_btn" class="btn default">Create</button></td>
                     </tr>
                     <tr>
                         <td colspan="2"><span id="createProfile_Out"></span></td>
