Fix BCE file structure to the correct standard

--- a/login.html
+++ b/login.html
@@ -24,6 +24,18 @@
         <br>
         <span class="loginFormErr" id="passwordError"></span>
         
+        <br><br>
+
+        <label class="loginFormLabel">
+            <b>User Profile: </b>
+        </label>
+        <select name="profile" id="login_profile">
+            <option value="admin">Admin</option>
+            <option value="owner">Owner</option>
+            <option value="manager">Manager</option>
+            <option value="staff">Staff</option>
+        </select>
+
         <br><br><br>
         <button name="login" id="login_btn">Login</button>
         <br>
