--- a/manageUserProfile.html
+++ b/manageUserProfile.html
@@ -14,7 +14,7 @@
         <br>
         
         <div class="useradminarea">
-            <form name="createProfile" id="createProfile_form" class="profileCenterTable" style="display:none">
+            <form name="createProfile" id="createProfile_form" class="profileCenterTable">
                 <table class="createProfileTable" id="createProfileTable">
                     <th colspan="2">Create Account</th>
                     <tr>
