--- a/manageUserProfile.html
+++ b/manageUserProfile.html
@@ -16,7 +16,7 @@
         <div class="useradminarea">
             <form name="createProfile" id="createProfile_form" class="profileCenterTable">
                 <table class="createProfileTable" id="createProfileTable">
-                    <th colspan="2">Create Account</th>
+                    <th colspan="2">Create Profile</th>
                     <tr>
                         <td>Profile Name:</td>
                         <td><input type="text" placeholder="Enter profile name" name="profileName" id="createProfile_name"></td>
