--- a/manageUserAccount.html
+++ b/manageUserAccount.html
@@ -10,10 +10,12 @@
             <input type="text" placeholder="Search name.." name="name" class="searchBar" id="search_name">
             <button type="submit" class="searchBtn" id="search_btn">Search</button>
         </form>
+
         <br>
+
         <div class="useradminarea">
-            <form name="createUser" id="createUser_form" class="userCenterTable" style="display:none">
-                <table class="createUserTable" id="createusertable">
+            <form name="createUser" id="createUser_form" class="userCenterTable">
+                <table class="createUserTable" id="createusertable" style="display:none">
                     <th colspan="2">Create Account</th>
                     <tr>
                         <td>Username:</td>
