--- a/manageUserProfile.html
+++ b/manageUserProfile.html
@@ -15,7 +15,7 @@
         
         <div class="useradminarea">
             <form name="createProfile" id="createProfile_form" class="profileCenterTable">
-                <table class="createProfileTable" id="createProfileTable">
+                <table class="createProfileTable" id="createProfileTable" style="display:none">
                     <th colspan="2">Create Profile</th>
                     <tr>
                         <td>Profile Name:</td>
