Change loading of script due to loading of js faster than html causing script to fail to load properly.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>Solveware</title>
 
     <link rel="stylesheet" href="style/main.css">
-    <script defer type="module" src="js/main.js"></script>
     <script type="text/javascript" src="js/include.js"></script>
+
+    <script>
+        window.addEventListener("load", function () {
+            let script = document.createElement("script");
+            script.type = "module";
+            script.src = "js/main.js";
+            document.head.appendChild(script);
+        });
+    </script>
 
 </head>
 <body onload="checkUser()">
