--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script type="text/javascript" src="js/include.js"></script>
 
     <script>
-        window.addEventListener("load", function () {
+        window.onload = function () {
             let script = document.createElement("script");
             script.type = "module";
             script.src = "js/main.js";
             document.head.appendChild(script);
-        });
+        };
     </script>
 
 </head>
