Update on orders item

--- a/login.html
+++ b/login.html
@@ -41,6 +41,7 @@
         <br>
         <span class="loginFormErr" id="loginUser_Out"></span>    
         <br><br>     
-    </form> 
+    </form>
+    </div>
 </body>
 </html>
