Completed menu, cart and payment

--- a/cart.html
+++ b/cart.html
@@ -27,6 +27,8 @@
             </tr> -->
         </table>
         <input type="submit" value="Make payment" class="cartPayment">
+        <br><br>
+        <span class="cartFormErr" id="cartErr"></span>
     </form>
     </div>
 </body>
