Fixed bug where cart wasn't appearing

--- a/manageOrder.html
+++ b/manageOrder.html
@@ -22,13 +22,13 @@
 
             <br>
 
-            <table class="cartTable" id="viewCart_Table" style="display: none;">
+            <table class="order_cartTable" id="viewCart_Table" style="display: none;">
                 <thead>
                     <tr>
                         <th colspan="4">Order Cart</th>
                     </tr>
                 </thead>
-                <tbody id="viewCart_tbody">
+                <tbody id="viewOrderCart_tbody">
     
                 </tbody>    
 
