--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button class="tablink" onclick="openTab('mngOrder', this)" id="mngOrderTab" style="display: none; width:150px">Manage Order</button>
         <button class="tablink" onclick="openTab('mngMenu', this)" id="mngMenuTab" style="display: none; width:150px">Manage Menu</button>
         <button class="tablink" onclick="openTab('cpnCode', this)" id="cpnCodeTab" style="display: none; width: auto">Coupon Code</button>
+        <button class="tablink" onclick="openTab('report', this)" id="reportTab" style="display: none; width: auto">Report</button>
         <button class="tablink" onclick="loginLogout()" id="loginTab" style="float:right">Login</button>
         <button class="tablink" onclick="openTab('cart', this)" id="cartTab" style="float:right">Cart <i class='fas fa-shopping-cart'></i></button>
         <button class="tablink" onclick="openTab('userDetails', this)" id="viewUserDetailsTab" style="float:right; width: auto; display: none;"></button>
@@ -51,6 +52,10 @@
     
     <div id="mngMenu" class="tabcontent">
         <div include-html="manageMenu.html"></div>
+    </div>
+
+    <div id="report" class="tabcontent">
+        <div include-html="report.html"></div>
     </div>
 
     <div id="cart" class="tabcontent">
